--- a/tps_feb2022.ipynb
+++ b/tps_feb2022.ipynb
@@ -29,7 +29,7 @@
     "from xgboost import XGBClassifier\n",
     "\n",
     "seed = 3165\n",
-    "bacteria_data = pd.read_csv('../input/tabular-playground-series-feb-2022/train.csv', index_col='row_id')"
+    "bacteria_data = pd.read_csv('data/train.csv', index_col='row_id')"
    ]
   },
   {
@@ -156,7 +156,7 @@
    },
    "outputs": [],
    "source": [
-    "bacteria_test_data = pd.read_csv('../input/tabular-playground-series-feb-2022/test.csv', index_col='row_id')\n",
+    "bacteria_test_data = pd.read_csv('data/test.csv', index_col='row_id')\n",
     "bacteria_test_data['target'] = le.inverse_transform(best_xgbm.predict(bacteria_test_data))\n",
     "bacteria_test_data['target'].to_csv('./submission.csv')"
    ]
