--- a/tpsfeb22.ipynb
+++ b/tpsfeb22.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5c6164b8",
+   "id": "0f25374b",
    "metadata": {
     "papermill": {
-     "duration": 0.011737,
-     "end_time": "2022-02-14T22:04:23.993768",
+     "duration": 0.010994,
+     "end_time": "2022-02-15T12:09:44.257386",
      "exception": false,
-     "start_time": "2022-02-14T22:04:23.982031",
+     "start_time": "2022-02-15T12:09:44.246392",
      "status": "completed"
     },
     "tags": []
@@ -19,13 +19,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c3c8a97",
+   "id": "d89d36cd",
    "metadata": {
     "papermill": {
-     "duration": 0.009504,
-     "end_time": "2022-02-14T22:04:24.015559",
+     "duration": 0.009561,
+     "end_time": "2022-02-15T12:09:44.277550",
      "exception": false,
-     "start_time": "2022-02-14T22:04:24.006055",
+     "start_time": "2022-02-15T12:09:44.267989",
      "status": "completed"
     },
     "tags": []
@@ -37,20 +37,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5a9e6f22",
+   "id": "ba5675c3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-14T22:04:24.052434Z",
-     "iopub.status.busy": "2022-02-14T22:04:24.051616Z",
-     "iopub.status.idle": "2022-02-14T22:04:49.424775Z",
-     "shell.execute_reply": "2022-02-14T22:04:49.425211Z",
+     "iopub.execute_input": "2022-02-15T12:09:44.302683Z",
+     "iopub.status.busy": "2022-02-15T12:09:44.300990Z",
+     "iopub.status.idle": "2022-02-15T12:10:10.638194Z",
+     "shell.execute_reply": "2022-02-15T12:10:10.637574Z",
      "shell.execute_reply.started": "2022-02-14T21:54:41.285007Z"
     },
     "papermill": {
-     "duration": 25.4002,
-     "end_time": "2022-02-14T22:04:49.425511",
+     "duration": 26.350942,
+     "end_time": "2022-02-15T12:10:10.638351",
      "exception": false,
-     "start_time": "2022-02-14T22:04:24.025311",
+     "start_time": "2022-02-15T12:09:44.287409",
      "status": "completed"
     },
     "tags": []
@@ -72,20 +72,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e0f9eff5",
+   "id": "e3b0f88c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-14T22:04:49.587469Z",
-     "iopub.status.busy": "2022-02-14T22:04:49.586216Z",
-     "iopub.status.idle": "2022-02-14T22:04:50.480633Z",
-     "shell.execute_reply": "2022-02-14T22:04:50.481053Z",
+     "iopub.execute_input": "2022-02-15T12:10:10.792855Z",
+     "iopub.status.busy": "2022-02-15T12:10:10.792273Z",
+     "iopub.status.idle": "2022-02-15T12:10:11.682118Z",
+     "shell.execute_reply": "2022-02-15T12:10:11.681631Z",
      "shell.execute_reply.started": "2022-02-14T21:55:04.322556Z"
     },
     "papermill": {
-     "duration": 1.045433,
-     "end_time": "2022-02-14T22:04:50.481216",
+     "duration": 1.03364,
+     "end_time": "2022-02-15T12:10:11.682255",
      "exception": false,
-     "start_time": "2022-02-14T22:04:49.435783",
+     "start_time": "2022-02-15T12:10:10.648615",
      "status": "completed"
     },
     "tags": []
@@ -101,13 +101,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fc5a2f5",
+   "id": "eb469fcf",
    "metadata": {
     "papermill": {
-     "duration": 0.009742,
-     "end_time": "2022-02-14T22:04:50.501617",
+     "duration": 0.009732,
+     "end_time": "2022-02-15T12:10:11.702337",
      "exception": false,
-     "start_time": "2022-02-14T22:04:50.491875",
+     "start_time": "2022-02-15T12:10:11.692605",
      "status": "completed"
     },
     "tags": []
@@ -119,20 +119,20 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "218fc9de",
+   "id": "75d0af3d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-14T22:04:50.528047Z",
-     "iopub.status.busy": "2022-02-14T22:04:50.526330Z",
-     "iopub.status.idle": "2022-02-14T22:04:50.528720Z",
-     "shell.execute_reply": "2022-02-14T22:04:50.529132Z",
-     "shell.execute_reply.started": "2022-02-14T21:55:05.334260Z"
+     "iopub.execute_input": "2022-02-15T12:10:11.727356Z",
+     "iopub.status.busy": "2022-02-15T12:10:11.726525Z",
+     "iopub.status.idle": "2022-02-15T12:10:11.728289Z",
+     "shell.execute_reply": "2022-02-15T12:10:11.728715Z",
+     "shell.execute_reply.started": "2022-02-14T21:55:05.33426Z"
     },
     "papermill": {
-     "duration": 0.01773,
-     "end_time": "2022-02-14T22:04:50.529256",
+     "duration": 0.016544,
+     "end_time": "2022-02-15T12:10:11.728830",
      "exception": false,
-     "start_time": "2022-02-14T22:04:50.511526",
+     "start_time": "2022-02-15T12:10:11.712286",
      "status": "completed"
     },
     "tags": []
@@ -148,13 +148,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "350d58a5",
+   "id": "48ec6cbf",
    "metadata": {
     "papermill": {
-     "duration": 0.00959,
-     "end_time": "2022-02-14T22:04:50.548764",
+     "duration": 0.009627,
+     "end_time": "2022-02-15T12:10:11.748359",
      "exception": false,
-     "start_time": "2022-02-14T22:04:50.539174",
+     "start_time": "2022-02-15T12:10:11.738732",
      "status": "completed"
     },
     "tags": []
@@ -166,20 +166,20 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "08411642",
+   "id": "fdf74bb2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-14T22:04:50.573455Z",
-     "iopub.status.busy": "2022-02-14T22:04:50.572622Z",
-     "iopub.status.idle": "2022-02-14T22:04:50.575209Z",
-     "shell.execute_reply": "2022-02-14T22:04:50.574784Z",
-     "shell.execute_reply.started": "2022-02-14T21:55:05.341100Z"
+     "iopub.execute_input": "2022-02-15T12:10:11.772814Z",
+     "iopub.status.busy": "2022-02-15T12:10:11.772311Z",
+     "iopub.status.idle": "2022-02-15T12:10:11.775846Z",
+     "shell.execute_reply": "2022-02-15T12:10:11.775417Z",
+     "shell.execute_reply.started": "2022-02-14T21:55:05.3411Z"
     },
     "papermill": {
-     "duration": 0.016754,
-     "end_time": "2022-02-14T22:04:50.575313",
+     "duration": 0.01756,
+     "end_time": "2022-02-15T12:10:11.775958",
      "exception": false,
-     "start_time": "2022-02-14T22:04:50.558559",
+     "start_time": "2022-02-15T12:10:11.758398",
      "status": "completed"
     },
     "tags": []
@@ -201,20 +201,20 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "36ff10cc",
+   "id": "d93a64d9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-14T22:04:50.601085Z",
-     "iopub.status.busy": "2022-02-14T22:04:50.600290Z",
-     "iopub.status.idle": "2022-02-14T22:48:48.369666Z",
-     "shell.execute_reply": "2022-02-14T22:48:48.369218Z",
+     "iopub.execute_input": "2022-02-15T12:10:11.801352Z",
+     "iopub.status.busy": "2022-02-15T12:10:11.800611Z",
+     "iopub.status.idle": "2022-02-15T12:10:29.430101Z",
+     "shell.execute_reply": "2022-02-15T12:10:29.429643Z",
      "shell.execute_reply.started": "2022-02-14T21:55:05.350612Z"
     },
     "papermill": {
-     "duration": 2637.784782,
-     "end_time": "2022-02-14T22:48:48.369792",
+     "duration": 17.644518,
+     "end_time": "2022-02-15T12:10:29.430232",
      "exception": false,
-     "start_time": "2022-02-14T22:04:50.585010",
+     "start_time": "2022-02-15T12:10:11.785714",
      "status": "completed"
     },
     "tags": []
@@ -224,7 +224,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 36 candidates, totalling 180 fits\n"
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n"
      ]
     },
     {
@@ -232,8 +232,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 2 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  46 tasks      | elapsed: 12.5min\n",
-      "[Parallel(n_jobs=-1)]: Done 180 out of 180 | elapsed: 43.7min finished\n"
+      "[Parallel(n_jobs=-1)]: Done   5 out of   5 | elapsed:   14.9s finished\n"
      ]
     },
     {
@@ -241,8 +240,8 @@
       "text/plain": [
        "GridSearchCV(cv=5,\n",
        "             estimator=Pipeline(steps=[('scaler',\n",
-       "                                        FunctionTransformer(func=<function binned_scaler_transform at 0x7f9694d37050>,\n",
-       "                                                            inverse_func=<function binned_scaler_inv_transform at 0x7f9694d37170>)),\n",
+       "                                        FunctionTransformer(func=<function binned_scaler_transform at 0x7ff4ebbd2050>,\n",
+       "                                                            inverse_func=<function binned_scaler_inv_transform at 0x7ff4ebbd2170>)),\n",
        "                                       ('model',\n",
        "                                        XGBClassifier(base_score=None,\n",
        "                                                      booster=None,\n",
@@ -251,6 +250,11 @@
        "                                                      colsample_bytree=None,\n",
        "                                                      enable_categorical=False,\n",
        "                                                      gamma=No...\n",
+       "                                                      num_parallel_tree=None,\n",
+       "                                                      predictor=None,\n",
+       "                                                      random_state=3165,\n",
+       "                                                      reg_alpha=None,\n",
+       "                                                      reg_lambda=None,\n",
        "                                                      scale_pos_weight=None,\n",
        "                                                      subsample=None,\n",
        "                                                      tree_method='gpu_hist',\n",
@@ -258,11 +262,9 @@
        "                                                      validate_parameters=None,\n",
        "                                                      verbosity=None))]),\n",
        "             n_jobs=-1,\n",
-       "             param_grid={'model__gamma': [0, 0.33, 0.66, 1],\n",
-       "                         'model__learning_rate': [0.3], 'model__max_depth': [6],\n",
-       "                         'model__n_estimators': [100],\n",
-       "                         'model__reg_lambda': [0, 2.5, 5],\n",
-       "                         'model__subsample': [0.25, 0.5, 1]},\n",
+       "             param_grid={'model__learning_rate': [0.1], 'model__max_depth': [6],\n",
+       "                         'model__n_estimators': [1],\n",
+       "                         'model__subsample': [0.5]},\n",
        "             scoring='accuracy', verbose=1)"
       ]
      },
@@ -273,12 +275,13 @@
    ],
    "source": [
     "param_grid = {\n",
-    "    'model__n_estimators': [100],\n",
+    "#     'model__n_estimators': [5000],\n",
+    "    'model__n_estimators': [1],\n",
     "    'model__max_depth': [6],\n",
-    "    'model__learning_rate': [0.3],\n",
-    "    'model__subsample': [0.25, 0.5, 1],\n",
-    "    'model__gamma': [0, 0.33, 0.66, 1],\n",
-    "    'model__reg_lambda': [0, 2.5, 5]\n",
+    "    'model__learning_rate': [0.1],\n",
+    "    'model__subsample': [0.5],\n",
+    "#     'model__gamma': [0, 0.33, 0.66, 1],\n",
+    "#     'model__reg_lambda': [0, 2.5, 5]\n",
     "}\n",
     "fit_params = {\n",
     "    'model__eval_metric': 'mlogloss'\n",
@@ -292,20 +295,20 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ec0cf268",
+   "id": "937f8ee4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-14T22:48:48.405641Z",
-     "iopub.status.busy": "2022-02-14T22:48:48.404554Z",
-     "iopub.status.idle": "2022-02-14T22:48:53.758293Z",
-     "shell.execute_reply": "2022-02-14T22:48:53.759025Z",
+     "iopub.execute_input": "2022-02-15T12:10:29.470485Z",
+     "iopub.status.busy": "2022-02-15T12:10:29.469266Z",
+     "iopub.status.idle": "2022-02-15T12:10:30.542241Z",
+     "shell.execute_reply": "2022-02-15T12:10:30.543054Z",
      "shell.execute_reply.started": "2022-02-14T21:56:43.676565Z"
     },
     "papermill": {
-     "duration": 5.376577,
-     "end_time": "2022-02-14T22:48:53.759260",
+     "duration": 1.101081,
+     "end_time": "2022-02-15T12:10:30.543229",
      "exception": false,
-     "start_time": "2022-02-14T22:48:48.382683",
+     "start_time": "2022-02-15T12:10:29.442148",
      "status": "completed"
     },
     "tags": []
@@ -315,10 +318,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Params: {'model__gamma': 0, 'model__learning_rate': 0.3, 'model__max_depth': 6, 'model__n_estimators': 100, 'model__reg_lambda': 0, 'model__subsample': 0.5}\n",
-      "Best Score: 0.9834733333333334\n",
-      "Train Score: 0.9953533333333333\n",
-      "Test Score: 0.9857\n"
+      "Best Params: {'model__learning_rate': 0.1, 'model__max_depth': 6, 'model__n_estimators': 1, 'model__subsample': 0.5}\n",
+      "Best Score: 0.7097133333333333\n",
+      "Train Score: 0.7205533333333334\n",
+      "Test Score: 0.70924\n"
      ]
     }
    ],
@@ -331,13 +334,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9831ed69",
+   "id": "2dda733b",
    "metadata": {
     "papermill": {
-     "duration": 0.012977,
-     "end_time": "2022-02-14T22:48:53.785466",
+     "duration": 0.012322,
+     "end_time": "2022-02-15T12:10:30.569875",
      "exception": false,
-     "start_time": "2022-02-14T22:48:53.772489",
+     "start_time": "2022-02-15T12:10:30.557553",
      "status": "completed"
     },
     "tags": []
@@ -349,20 +352,20 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d180e204",
+   "id": "8e8046ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-14T22:48:53.815229Z",
-     "iopub.status.busy": "2022-02-14T22:48:53.814379Z",
-     "iopub.status.idle": "2022-02-14T22:49:10.498249Z",
-     "shell.execute_reply": "2022-02-14T22:49:10.498694Z",
+     "iopub.execute_input": "2022-02-15T12:10:30.601655Z",
+     "iopub.status.busy": "2022-02-15T12:10:30.600835Z",
+     "iopub.status.idle": "2022-02-15T12:10:32.649330Z",
+     "shell.execute_reply": "2022-02-15T12:10:32.649863Z",
      "shell.execute_reply.started": "2022-02-14T21:56:49.341393Z"
     },
     "papermill": {
-     "duration": 16.700939,
-     "end_time": "2022-02-14T22:49:10.498857",
+     "duration": 2.067533,
+     "end_time": "2022-02-15T12:10:32.650021",
      "exception": false,
-     "start_time": "2022-02-14T22:48:53.797918",
+     "start_time": "2022-02-15T12:10:30.582488",
      "status": "completed"
     },
     "tags": []
@@ -372,20 +375,20 @@
      "data": {
       "text/plain": [
        "Pipeline(steps=[('scaler',\n",
-       "                 FunctionTransformer(func=<function binned_scaler_transform at 0x7f9694d37050>,\n",
-       "                                     inverse_func=<function binned_scaler_inv_transform at 0x7f9694d37170>)),\n",
+       "                 FunctionTransformer(func=<function binned_scaler_transform at 0x7ff4ebbd2050>,\n",
+       "                                     inverse_func=<function binned_scaler_inv_transform at 0x7ff4ebbd2170>)),\n",
        "                ('model',\n",
        "                 XGBClassifier(base_score=0.5, booster='gbtree',\n",
        "                               colsample_bylevel=1, colsample_bynode=1,\n",
        "                               colsample_bytree=1, enable_categorical=False,\n",
        "                               gamma=0, gpu_id=0, importance_type=None,\n",
-       "                               inte...ate=0.3,\n",
+       "                               inte..._rate=0.1,\n",
        "                               max_delta_step=0, max_depth=6,\n",
        "                               min_child_weight=1, missing=nan,\n",
-       "                               monotone_constraints='()', n_estimators=100,\n",
+       "                               monotone_constraints='()', n_estimators=1,\n",
        "                               n_jobs=2, num_parallel_tree=1,\n",
        "                               objective='multi:softprob', predictor='auto',\n",
-       "                               random_state=3165, reg_alpha=0, reg_lambda=0,\n",
+       "                               random_state=3165, reg_alpha=0, reg_lambda=1,\n",
        "                               scale_pos_weight=None, subsample=0.5,\n",
        "                               tree_method='gpu_hist', use_label_encoder=False,\n",
        "                               validate_parameters=1, verbosity=None))])"
@@ -404,20 +407,20 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5e947eea",
+   "id": "9b1711a8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-14T22:49:10.529891Z",
-     "iopub.status.busy": "2022-02-14T22:49:10.529291Z",
-     "iopub.status.idle": "2022-02-14T22:49:24.561005Z",
-     "shell.execute_reply": "2022-02-14T22:49:24.561437Z",
+     "iopub.execute_input": "2022-02-15T12:10:32.679788Z",
+     "iopub.status.busy": "2022-02-15T12:10:32.679241Z",
+     "iopub.status.idle": "2022-02-15T12:10:44.915400Z",
+     "shell.execute_reply": "2022-02-15T12:10:44.914869Z",
      "shell.execute_reply.started": "2022-02-14T21:57:05.105238Z"
     },
     "papermill": {
-     "duration": 14.04956,
-     "end_time": "2022-02-14T22:49:24.561606",
+     "duration": 12.252812,
+     "end_time": "2022-02-15T12:10:44.915532",
      "exception": false,
-     "start_time": "2022-02-14T22:49:10.512046",
+     "start_time": "2022-02-15T12:10:32.662720",
      "status": "completed"
     },
     "tags": []
@@ -450,14 +453,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 2709.936188,
-   "end_time": "2022-02-14T22:49:25.890581",
+   "duration": 70.163106,
+   "end_time": "2022-02-15T12:10:46.241517",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-02-14T22:04:15.954393",
+   "start_time": "2022-02-15T12:09:36.078411",
    "version": "2.3.3"
   }
  },
